--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 소고기먹자소고기!
+<textarea name="" id="" cols="30" rows="10">
+    SELECT A.NAME, B.PHONE
+    FROM EMP AS A
+    INNER JOIN DET AS B
+    ON A.ID = B.ID;
+</textarea>
+
+<button id="submit">전송</button>
+
 </body>
+<script>
+
+</script>
 </html>
