1) service 패키지 생성 2) ansi, common, oracle 패키지 생성 3) 패키지별 interface 생성 4) port 번호 8100으로 변경 (따르기 바람!)

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-소고기먹자소고기!
+<form action="http://localhost:8100/api/ansi/oracle" method="get">
+    <textarea rows="4" cols="50">
+    select * from
+    </textarea>
+<input type="submit" value="제출">
+</form>
+
 </body>
 </html>
