--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Convert SQL Program - by 4team</title>
+    
+    <style type="text/css">
+        .text-unit{
+            float : left;
+        }
+    </style>
 </head>
 <body>
-소고기먹자소고기!
+    <h1>Convert SQL program</h1>
+    <div class ="textSection">
+        <div class="text-unit">
+            <textarea name="" id="" cols="50" rows="30"></textarea>
+        </div>
+        <div class="text-unit">
+            <h3>convert ansi to oracle</h3>
+       </div>
+        <div class="text-unit">
+            <textarea name="" id="" cols="50" rows="30"></textarea>
+        </div>
+  </div>
+
 </body>
 </html>
