--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,25 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Convert SQL Program - by 4team</title>
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
     <style type="text/css">
-        .text-unit{
+        .textSection{
             float : left;
+            border: 1px solid;
+            overflow: auto;
         }
+
+        .optionSection {
+            /* position:relative; */
+            float: right;
+            border: 25px solid;
+            height: 640px;
+            width: 150px;
+        }
+
+        .textSection > div{
+            float : left;
+            border: 1px solid;        
+            /* overflow: auto; */
+        }
+  
     </style>
 </head>
 <body>
     <h1>Convert SQL program</h1>
-    <div class ="textSection">
-        <div class="text-unit">
-            <textarea name="" id="" cols="50" rows="30"></textarea>
+    <div class="container">
+        <div class ="textSection">
+            <div>
+                <textarea class="form-control" name="" id="targetText" cols="50" rows="20"></textarea>
+            </div>
+            <div>
+                <button type="button" class="btn btn-success" id="convertBtn">convert</button>
+            </div>
+            <div>
+                <textarea class="form-control" name="" id="resultText" cols="50" rows="20"></textarea>
+            </div>
         </div>
-        <div class="text-unit">
-            <h3>convert ansi to oracle</h3>
-       </div>
-        <div class="text-unit">
-            <textarea name="" id="" cols="50" rows="30"></textarea>
+
+        <div class ="optionSection">
+           옵션을 넣어보자
+      
         </div>
-  </div>
+    </div>
+
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script>
+        $("#convertBtn").bind("click", function(event) {
+            var paramData = {
+                targetText :  $("#targetText").val(),
+                option : ""
+            }
+
+            $("#resultText").val($("#targetText").val());
+
+            // $.ajax({
+            //     url: '/convert/api/', // 요청 할 주소
+            //     type: 'POST',
+            //     data: paramData,
+            //     dataType: 'json', 
+            //     success: function(response) {
+            //         var resultStr = JSON.parse(response);
+            //         result = resultStr.str;                   
+                    
+            //         $("#resultText").text(result);
+                    
+            //     }, // 요청 완료 시
+            //     error: function(response) {}, // 요청 실패.
+            //     complete: function(response) {} // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
+            // });
+
+	   });
+    </script>
+</body>
 
 </html>
