--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,24 +6,147 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Convert SQL Program - by 4team</title>
     
-    <style type="text/css">
-        .text-unit{
+<!-- 합쳐지고 최소화된 최신 CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<!-- 부가적인 테마 -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+   <style type="text/css">       
+   		.textSection{
             float : left;
+            overflow: auto;
         }
-    </style>
+
+        .textSection > div{
+            float : left;
+            /* overflow: auto; */
+        }
+
+	    .sidenav {
+		    height: 100%;
+		    width: 200px;
+		    position: fixed;
+		    z-index: 1;
+		    top: 0;
+		    left: 0;
+		    background-color: #111;
+		    overflow-x: hidden;
+		    transition: 0.5s;
+		    padding-top: 60px;
+	    }
+	
+	    .sidenav a {
+		    padding: 8px 8px 8px 32px;
+		    text-decoration: none;
+		    font-size: 20px;
+		    color: #818181;
+		    display: block;
+		    transition: 0.3s;
+	    }
+	
+	    .sidenav a:hover {
+	    	color: #f1f1f1;
+	    }
+	
+	    .sidenav .closebtn {
+		    position: absolute;
+		    top: 0;
+		    right: 20px;
+		    font-size: 36px;
+		    margin-left: 50px;
+	    }
+	
+	    #main {
+		    transition: margin-left .5s;
+		    padding: 30px;
+            margin-left: 250px;
+	    }
+	
+	    @media screen and (max-height: 450px) {
+		    .sidenav {padding-top: 15px;}
+		    .sidenav a {font-size: 15px;}
+	    }
+
+   </style>
+
 </head>
+
 <body>
-    <h1>Convert SQL program</h1>
-    <div class ="textSection">
-        <div class="text-unit">
-            <textarea name="" id="" cols="50" rows="30"></textarea>
+
+  <div id="main">
+    <h1>Four Team Project v0.1</h1>
+    <p>2019.06 update - Ansi to Oracle </p>
+   
+    <h2>Convert SQL program</h2>
+    <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Option</span>
+
+    <div class="container">
+        <div class ="textSection">
+            <div>
+                <textarea class="form-control" name="" id="targetText" cols="50" rows="20" placeholder="변환시킬 SQL을 입력해주세요."></textarea>
+            </div>
+            <div id="convert-btn-section">
+                <button type="button" class="btn btn-success" id="convertBtn">convert</button>
+            </div>
+            <div>
+                <textarea class="form-control" name="" id="resultText" cols="50" rows="20"></textarea>
+            </div>
         </div>
-        <div class="text-unit">
-            <h3>convert ansi to oracle</h3>
-       </div>
-        <div class="text-unit">
-            <textarea name="" id="" cols="50" rows="30"></textarea>
-        </div>
+
+    </div>
+
+    <div id="mySidenav" class="sidenav">
+	    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	    <a href="#">대소문자 변환</a>
+	    <a href="#">콤마위치</a>
+	    <a href="#">개행</a>
+	    <a href="#">Contact</a>
+ 	</div>
+  
   </div>
+
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script>
+        $("#convertBtn").bind("click", function(event) {
+            var paramData = {
+                targetText :  $("#targetText").val(),
+                option : ""
+            }
+
+            alert("변환해볼까요?")
+            $("#resultText").val($("#targetText").val());
+            // $.ajax({
+            //     url: '/convert/api/', // 요청 할 주소
+            //     type: 'POST',
+            //     data: paramData,
+            //     dataType: 'json', 
+            //     success: function(response) {
+            //         var resultStr = JSON.parse(response);
+            //         result = resultStr.str;                   
+                    
+            //         $("#resultText").text(result);
+                    
+            //     }, // 요청 완료 시
+            //     error: function(response) {}, // 요청 실패.
+            //     complete: function(response) {} // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
+            // });
+        });
+
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "200px";
+            document.getElementById("main").style.marginLeft = "250px";
+        }
+        
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("main").style.marginLeft= "0";
+        }
+
+    </script>
+</body>
 
 </html>
