--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -106,34 +106,37 @@
   </div>
 
     <!-- script -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <script>
+    <script  type="text/javascript">
         $("#convertBtn").bind("click", function(event) {
             var paramData = {
                 targetText :  $("#targetText").val(),
                 option : ""
             }
 
-            alert("변환해볼까요?")
+            alert( $("#targetText").val());
             $("#resultText").val($("#targetText").val());
-            // $.ajax({
-            //     url: '/convert/api/', // 요청 할 주소
-            //     type: 'POST',
-            //     data: paramData,
-            //     dataType: 'json', 
-            //     success: function(response) {
-            //         var resultStr = JSON.parse(response);
-            //         result = resultStr.str;                   
+
+            $.ajax({
+                url: 'ansi/oracle', // 요청 할 주소
+                type: 'post',
+                data: JSON.stringify(paramData),
+                contentType : "application/json; charset=UTF-8",
+                dataType: 'json', 
+                success: function(response) {
+                    var resultStr = JSON.parse(response);
+                    result = resultStr.str;                   
                     
-            //         $("#resultText").text(result);
+                    $("#resultText").text(result);
                     
-            //     }, // 요청 완료 시
-            //     error: function(response) {}, // 요청 실패.
-            //     complete: function(response) {} // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
-            // });
+                }, // 요청 완료 시
+                error: function(response) {}, // 요청 실패.
+                complete: function(response) {} // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
+            });
+
         });
 
         function openNav() {
