--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -115,10 +115,7 @@
             var paramData = {
                 targetText :  $("#targetText").val(),
                 option : ""
-            }
-
-            alert( $("#targetText").val());
-            $("#resultText").val($("#targetText").val());
+            };
 
             $.ajax({
                 url: 'ansi/oracle', // 요청 할 주소
@@ -127,14 +124,15 @@
                 contentType : "application/json; charset=UTF-8",
                 dataType: 'json', 
                 success: function(response) {
-                    var resultStr = JSON.parse(response);
-                    result = resultStr.str;                   
-                    
+                    result = response.resultQuery;                   
+                      
                     $("#resultText").text(result);
                     
                 }, // 요청 완료 시
-                error: function(response) {}, // 요청 실패.
-                complete: function(response) {} // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
+                error: function(response) {
+                }, // 요청 실패.
+                complete: function(response) {
+                } // 요청의 실패, 성공과 상관 없이 완료 될 경우 호출
             });
 
         });
