--- a/bin/main/templates/main.html
+++ b/bin/main/templates/main.html
@@ -97,9 +97,15 @@
 
     <div id="mySidenav" class="sidenav">
 	    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	    <a href="#">대소문자 변환</a>
-	    <a href="#">콤마위치</a>
-	    <a href="#">개행</a>
+        <a href="#">대소문자 변환</a>
+        <label><input type='radio' name='optionUpper' value=true />전체 대문자</label><br>
+        <label><input type='radio' name='optionUpper' value=false />전체 소문자</label>
+        <a href="#">콤마위치</a>
+        <label><input type='radio' name='optionComma' value=true />전방위치</label><br>
+        <label><input type='radio' name='optionComma' value=false />후방위치</label>
+        <a href="#">개행</a>
+        <label><input type='radio' name='optionLn' value=true />개행1</label><br>
+        <label><input type='radio' name='optionLn' value=false />개행2</label>
 	    <a href="#">Contact</a>
  	</div>
   
@@ -112,9 +118,15 @@
 
     <script  type="text/javascript">
         $("#convertBtn").bind("click", function(event) {
+            var option = {
+                comma : $('input[name="optionUpper"]:checked').val() =='true' ? true : false,
+                newLine : $('input[name="optionLn"]:checked').val() =='true' ? true : false,
+                upperCase : $('input[name="optionUpper"]:checked').val() =='true' ? true : false,
+            };
+
             var paramData = {
-                targetText :  $("#targetText").val(),
-                option : ""
+                query :  $("#targetText").val(),
+                option : option
             };
 
             $.ajax({
